[package]
name = "chip8"
version = "0.1.0"
authors = ["Custards1 <swagyolamos@gmail.com>"]
edition = "2018"
[lib]
name="chip8"
[dependencies]
oorandom = "*"
sdl2 = "0.35"
byteorder="*"
clap = { version = "3.0.14", features = ["derive"] }
[profile.dev]
overflow-checks = false
[profile.release]
overflow-checks = false